--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Inspirational Homepage: Your personalized hub for daily motivation, weather updates, and goal tracking. Start your day inspired!"
     />
+    <meta
+      name="keywords"
+      content="Inspirational Homepage, motivation, weather, daily goals, React, Redux, quotes, productivity"
+    />
+    <meta name="author" content="Makris Charalampos" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +29,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Inspirational Homepage | Daily Motivation, Weather, and Goals</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Inspirational Homepage" />
+    <meta
+      property="og:description"
+      content="Your personalized hub for daily motivation, weather updates, and goal tracking."
+    />
+    <meta property="og:image" content="/public/favicon.ico" />
+    <meta
+      property="og:url"
+      content="https://inspirational-homepage-mcshooter.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Inspirational Homepage" />
+    <meta
+      name="twitter:description"
+      content="Your personalized hub for daily motivation, weather updates, and goal tracking."
+    />
+    <meta name="twitter:image" content="/public/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
