--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Inspirational Homepage | Daily Motivation, Weather, and Goals</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Inspirational Homepage" />
     <meta
